force-app/main/default/objects/Adds__c/Adds__c.object-meta.xml
<CustomObject>
    <label>Add</label>
    <nameField>
        <label>Adds Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Adds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>