force-app/main/default/objects/Adds__c/fields/Types_of_Add__c.field-meta.xml
<CustomField>
    <fullName>Types_of_Add__c</fullName>
    <label>Types of Add</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fashion</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>