force-app/main/default/objects/Adds__c/fields/Upload_Add__c.field-meta.xml
<CustomField>
    <fullName>Upload_Add__c</fullName>
    <label>Upload Add</label>
    <type>Url</type>
</CustomField>